--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,10 @@
 name = "Drifter"
 uuid = "1e229871-6983-4c14-a913-6e2cca003bdc"
-authors = ["Nick Boyd <nickboyd@gmail.com>"]
-version = "0.1.1"
+authors = ["Nick Boyd <nickboyd@gmail.com>", "Nicholas Bauer <bauer@xgenomes.com>"]
+version = "0.1.2"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Transducers = "28d57a85-8fef-5791-bfe6-a80928e7c999"
